// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieDetailsPage component should render with other elements, depends on props 1`] = `
<React.Fragment>
  <Header />
  <Memo(Connect(MovieInfoContainer)) />
  <Memo(Connect(MovieListContainer)) />
  <div
    className="loading"
  >
    <Spinner />
  </div>
  <Memo(Connect(FooterContainer)) />
</React.Fragment>
`;

exports[`MovieDetailsPage component should render without crashing 1`] = `
<React.Fragment>
  <Header />
  <Memo(Connect(MovieInfoContainer)) />
  <Memo(Connect(MovieListContainer)) />
  <div
    className="loading"
  />
</React.Fragment>
`;
